update: split to DDD
